# scene-recall

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  scenerecall.md
pipeline/: check_env.py  cli.py  config.py
pipeline/api/: __init__.py  main.py
pipeline/eval/: __init__.py  gold_queries.yaml  run_eval.py
pipeline/eval/results/: 2026-06-25-baseline.txt
pipeline/index/: schema.py  writer.py
pipeline/ingest/: __init__.py  annotate.py  dialogue.py  embed.py  media.py  pipeline.py  probe.py  shots.py
pipeline/search/: __init__.py  retrieve.py
pipeline/tests/: __init__.py  conftest.py  make_fixtures.py  test_annotate.py  test_config.py  test_dialogue.py  test_embed.py  test_eval.py  test_media.py  test_pipeline.py  test_probe.py  test_retrieve.py  test_shots.py  test_writer.py
web/: next.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: LibraryView.tsx  ResultGrid.tsx  ShotCard.tsx  VideoModal.tsx
web/lib/: format.ts
web/types/: api.ts
