[project]
name = "cinema-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.2",
    "fastapi>=0.138.1",
    "faster-whisper>=1.2.1",
    "google-genai>=2.10.0",
    "lancedb[embeddings]>=0.33.0",
    "pyyaml>=6.0.3",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.12.1",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = ["pytest>=9.1.1"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{index = "pytorch-cu128"}]
torchvision = [{index = "pytorch-cu128"}]
